--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <header>
-        <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/4SMwRXhpZgAATU0AKgAAAAgABQEaAAUAAAABAAAASgEbAAUAAAABAAAAUgEoAAMAAAABAAIA" alt="Watchful Helper">
+        <img src="https://via.placeholder.com/200" alt="Watchful Helper">
         <h1>WatchfulHelper</h1>
     </header>
     <div class="container">
@@ -74,3 +74,4 @@
     </footer>
 </body>
 </html>
+
